tests/gen/testdata/configs/fail/xrpc_missing_remote_cidrs.jsonnet
// xrpc requires remote_cidrs for every configured peer
// error_contains: remote_cidrs is required
{
  region: 'eu-frankfurt-1',
  region_short_name: 'fra',
  hub: {
    kind: 'hub_e',
    network: {
      vcn: '10.0.0.0/21',
      remote_peering_connections: {
        region_b: {},
      },
    },
  },
  environments: {
    prod: {
      shared_project_network: { network: { vcn: '10.0.64.0/21' } },
    },
  },
}
